
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int u32 ;
typedef float f32 ;
typedef float** MtxP ;
typedef float** Mtx ;


 int c_guMtxCopy (float**,float**) ;

u32 c_guMtxInvXpose(Mtx src, Mtx xPose)
{
    Mtx mTmp;
    MtxP m;
    f32 det;

    if(src == xPose)
        m = mTmp;
    else
        m = xPose;


    det = src[0][0]*src[1][1]*src[2][2] + src[0][1]*src[1][2]*src[2][0] + src[0][2]*src[1][0]*src[2][1]
          - src[2][0]*src[1][1]*src[0][2] - src[1][0]*src[0][1]*src[2][2] - src[0][0]*src[2][1]*src[1][2];


    if(det == 0.0f) return 0;






    det = 1.0f / det;

    m[0][0] = (src[1][1]*src[2][2] - src[2][1]*src[1][2]) * det;
    m[0][1] = -(src[1][0]*src[2][2] - src[2][0]*src[1][2]) * det;
    m[0][2] = (src[1][0]*src[2][1] - src[2][0]*src[1][1]) * det;

    m[1][0] = -(src[0][1]*src[2][2] - src[2][1]*src[0][2]) * det;
    m[1][1] = (src[0][0]*src[2][2] - src[2][0]*src[0][2]) * det;
    m[1][2] = -(src[0][0]*src[2][1] - src[2][0]*src[0][1]) * det;

    m[2][0] = (src[0][1]*src[1][2] - src[1][1]*src[0][2]) * det;
    m[2][1] = -(src[0][0]*src[1][2] - src[1][0]*src[0][2]) * det;
    m[2][2] = (src[0][0]*src[1][1] - src[1][0]*src[0][1]) * det;


    m[0][3] = 0.0F;
    m[1][3] = 0.0F;
    m[2][3] = 0.0F;


    if(m == mTmp)
        c_guMtxCopy(mTmp, xPose);

    return 1;
}
